SERVER-69901 Moved `initializeCommandHooks` to before `ServiceEntryPoint` is set